# orderly

./: .build.yml  .gitignore  Cargo.toml  LICENSE  README.md  do
.github/: FUNDING.yml
ci/: run_ci
example/: .gitignore  README.md  fake-web  lifecycle-hooks  log-sv  redis  run-example  run_example  server.go  unstable-service
example/web-server/: Cargo.toml
example/web-server/src/: main.rs
man/: orderly.1.md  orderly.1.ronn  overseer.1.ronn
src/: main.rs  specs.rs
test/: run_tests
test/cases/0001_start_shutdown/: run  sv
test/cases/0002_timeouts/: run  sv  test.expected  test1.expected  test2.expected  test3.expected  test5.expected
test/cases/0003_nested/: nested  run  sv  test.expected
test/cases/0004_rate_limi_abort/: run  sv
test/cases/0004_rate_limit_abort/: run  test.expected
test/cases/0005_child_ignores_sigterm/: run  sv
test/cases/0006_dies_during_wait_started/: run  sv
test/cases/0007_orderly_lifecycle/: lifecycle  run  sv  test.expected  test1.expected  test2.expected
test/cases/0008_child_signal_orderly/: run  sv  test.expected
