[package]
name = "orderly"
version = "0.5.0"
authors = ["Andrew Chambers <ac@acha.ninja>"]
edition = "2018"
description = "A program for ordered re(start),stop and cleanup of processes."
license = "MIT"

[dependencies]
libc = "0.2"
nix = "0.13"
crossbeam-channel = "0.3"
signal-hook = { version = "0.1", default-features = false }
log = "0.4"
simple_logger = "1.0.1"